Added completed Notebook

--- a/Web_Scraping_HTML_Page.ipynb
+++ b/Web_Scraping_HTML_Page.ipynb
@@ -471,10 +471,21 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "data.to_excel('mailbox_locations_data.xlsx')"
       ],
       "metadata": {
         "id": "1AHhbeQZC3vs"
+      },
+      "execution_count": 28,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "UAeA5jy5DR_y"
       },
       "execution_count": null,
       "outputs": []
